--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
-                <p class="banner-decription">
+                <p class="text-light-gray">
                     many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
                     some form, by injected humour, or randomised words which don't look even
                 </p>
@@ -47,7 +47,7 @@
                 <h3 class="teams-title"><span class="span-1">Quick list</span> <span class="span-2">of Our</span>
                     <span class="span-3"> <br>Features</span>
                 </h3>
-                <p class="teams-decription">There are many variations of passages of Lorem Ipsum available,
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available,
                     but the majority have suffered alteration in some form, by injected
                     humour, or randomised words which don't look even
                 </p>
