added some facts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <h3 class="nav-logo">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-        <!-- Feature section start-->
+        <!-- Teams section start-->
 
         <section class="teams-container">
             <div class="team-img-container">
@@ -44,7 +44,7 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="teams-content">
-                <h3 class="teams-title"><span class="span-1">Quick list</span> <span class="span-2">of Our</span>
+                <h3 class="section-title"><span class="span-1">Quick list</span> <span class="span-2">of Our</span>
                     <span class="span-3"> <br>Features</span>
                 </h3>
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available,
@@ -54,7 +54,26 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-        <!-- Feature section End-->
+        <!-- Teams section End-->
+
+        <!-- Features Section Start -->
+
+        <section class="features-container">
+            <div class="div"></div>
+            <div class="div"></div>
+        </section>
+
+        <!-- Features Section End -->
+
+        <!-- Facts Section Start -->
+
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but <br>
+                the majority have suffered alteration.</p>
+        </section>
+
+        <!-- Facts Section End -->
     </main>
 
     <footer>
