--- a/index.html
+++ b/index.html
@@ -71,13 +71,54 @@
             <h3 class="section-title">Some Facts</h3>
             <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but <br>
                 the majority have suffered alteration.</p>
+
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title text-light-gray">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1400</h2>
+                    <p class="card-title text-light-gray">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title text-light-gray">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title text-light-gray">Email Send</p>
+                </div>
+            </div>
         </section>
 
         <!-- Facts Section End -->
+
+        <!-- Sponsors Section Start -->
+
+        <section class="sponsors">
+            <h3 class="section-title">Our Sponspors</h3>
+            <p>There are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration.</p>
+
+            <div class="sponsors-image-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
+
+        <!-- Sponsors Section End -->
     </main>
 
     <footer>
-
+        <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
